# repro_cargo_top

./: Cargo.toml
src/: main.rs
